[package]
name = "lazyproarcconvert"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

crossterm = "0.29"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
chrono = "0.4.42"

blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Obrázkové knihovny pro TIFF a WebP konverzi
image = { version = "0.25", default-features = false, features = ["tiff"] }
webp = "0.2.6"  # Přímá podpora WebP formátu

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[[bin]]
name = "lazyproarcconvert"
path = "src/main.rs"

[[bin]]
name = "lazyalto"
path = "src/bin/lazyalto.rs"
